<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MySupermarketApp</string>
    <string name="intro_btn">Let\'s start shopping</string>
    <string name="signup_signIn">Already registered?<font color="#008b86"> Sign In!</font></string>
    <string name="cartTitle">Cart</string>
    <string name="cart_total">Total: </string>
    <string name="cart_checkoutBtn">CHECKOUT</string>
    <string name="details_addToCartBtn">Add to cart</string>
    <string name="details_unit">Unit</string>
    <string name="main_search">Search&#8230;</string>
    <string name="main_categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="profile_history">History</string>
    <string name="profile_logout">Log out</string>
    <string name="signIn_signIn">Sign in!</string>
    <string name="password">Password</string>
    <string name="signIn_signup">Not registered?<font color="#008b86"> Sign Up!</font></string>
    <string name="signIn_signInBtn">Sign in</string>
    <string name="signup_signup">Sign up!</string>
    <string name="signup_signupBtn">Sign up</string>
    <string name="wishList_wishList">Wish List</string>
    <string name="orderTitle">Order</string>
    <string name="orderName">Name</string>
    <string name="orderLastname">Last name</string>
    <string name="orderPhone">Phone</string>
    <string name="orderAddress">Address</string>
    <string name="orderPC">P.C.</string>
    <string name="orderCash">Cash</string>
    <string name="orderCard">Card</string>
    <string name="orderCardNumber">Card Number</string>
    <string name="orderCardExpirationDate">Expiration Date (MM/YY)</string>
    <string name="orderCardCompletionBtn">ORDER COMPLETION</string>
</resources>